--- a/assets/css/my.css
+++ b/assets/css/my.css
@@ -1,17 +1,17 @@
-.sidebar[data-color="white"]:after,
-.off-canvas-sidebar[data-color="white"]:after {
-  background: #135589;
+.sidebar[data-color='white']:after,
+.off-canvas-sidebar[data-color='white']:after {
+  background: #a2c09d;
 }
 
 .sidebar-wrapper {
   overflow: hidden;
 }
 .main-panel {
-  background-color: #f5f8ff;
+  background-color: #fcfffd;
 }
 
-.sidebar[data-color="white"] .logo .simple-text,
-.off-canvas-sidebar[data-color="white"] .logo .simple-text {
+.sidebar[data-color='white'] .logo .simple-text,
+.off-canvas-sidebar[data-color='white'] .logo .simple-text {
   color: #ffff;
 }
 
